# MiningRobot

./: .gitignore  README.md
autonomy/: Makefile  README.txt
autonomy/aruco/calibration/: Makefile  calibration.cpp
autonomy/aruco/viewer/: camera.yml  main.cpp
autonomy/backend/: Makefile  USB_powercycle  USB_reload  autostart_run.sh  imu.errs  main.cpp  reboot_USB.sh
autonomy/cutplanner/: README.txt
autonomy/cutplanner/example_heightmap/: NOTES.txt  example_cut.scad  example_cut.stl  heightmap.stl
autonomy/frontend/: Makefile  controls.txt  main.cpp
autonomy/include/: nanoslot
autonomy/include/aurora/: coords.h  data_exchange.h  display.h  field_geometry.h  kinematic_links.cpp  kinematics.h  lunatic.h  mining.h  model.h  network.h  robot.h  robot_base.h  robot_serial.h  robot_states.cpp  simulator.h  ui.h
autonomy/include/gridnav/: gridnav_RMC.h
autonomy/include/nanoslot/: A_packet.h  FusionAhrs.cpp  FusionAhrs.h  FusionMath.h  firmware.h  firmware_HX711.h  firmware_milli.h  firmware_mpu6050.h  firmware_neopixel.h  firmware_speed.h  nanoboot_handoff.h  nanoslot_IMU.h  nanoslot_IMU_filter.h  nanoslot_exchange.h  nanoslot_sanity.h  serial.h
autonomy/include/ogl/: event.cpp  event.h
autonomy/localizer/: localizer.cpp
autonomy/lunabug/: .gitignore  Makefile  aurora_mining_robot_data_analysis_tool.ipynb  debug.txt  exchange_read  exchange_write  lunatic_capture_data  lunatic_capture_data.cpp  lunatic_data_2023_03_12_23_00_27_119.json  lunatic_print_state.cpp  lunaview.cpp
autonomy/lunaview/: .gitignore  Makefile  TO-DO.md  link-to-svg.txt  lunacapture.cpp
autonomy/nanoslot/: Makefile  Makefile.inc  README.txt
autonomy/ros2_workspace/: README.md  aurora_core_sl  build_aurora_core.sh  launchfile.py  run_aurora_core.sh
autonomy/ros2_workspace/src/aurora_core/: CMakeLists.txt  package.xml
autonomy/ros2_workspace/src/aurora_core/src/: aurora_node_core.cpp
autonomy/sim_vision/: field.txt
autonomy/vision/: Makefile  calibration.cpp  camera.xml  vision.cpp  vision_capture.cpp  vision_mining.cpp
autonomy/vision_webcam/: Makefile  camera.yml  main.cpp
documentation/www/: index.html
parts/rockwheel/: rockwheel2.scad
parts/walking_robot/: spinner.scad
proof_of_concept/imu_6050/: imu_6050.ino
proof_of_concept/imu_6050_nanoslot/: imu_6050_nanoslot.ino  nanoslot
proof_of_concept/neopixel_simple/: neopixel_simple.ino
proof_of_concept/servo_from_analog/: servo_from_analog.ino
proof_of_concept/systemd/: NOTES.txt
ros2_workspace/: README.md
ros2_workspace/install/: local_setup.sh  setup.sh
ros2_workspace/log/: latest_build
ros2_workspace/src/: README.md
support/conky/: NOTES.txt  conky.conf  conky.desktop
support/uhubctl/: README.md
(+353 files in other folders)
